// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Weather component with data Matches the snapshot: shows expanded Expand component 1`] = `
<li
  className="single_city"
  style={Object {}}
>
  <table>
    <tbody>
      <tr>
        <td>
          <img
            alt="Sukhumi weather icon"
            className="curr_weather"
            src="https://openweathermap.org/img/wn/03d@2x.png"
          />
        </td>
        <td>
          <ul
            className="data_space"
          >
            <li>
              <div
                className="city_name"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                Sukhumi
              </div>
            </li>
            <li>
              <div
                className="country_name"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                Abkhazia
              </div>
            </li>
          </ul>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          <ul
            className="detailWeather"
          >
            <li>
              <button
                className="expand"
                onClick={[Function]}
              >
                -
              </button>
            </li>
            <li>
              <table>
                <thead>
                  <tr>
                    <td>
                      Date & time
                    </td>
                    <td>
                      Forcast Weather
                    </td>
                    <td>
                      Forcast Temp
                    </td>
                    <td>
                      Forcast Body Temp
                    </td>
                    <td>
                      Forcast Max Temp
                    </td>
                    <td>
                      Forcast Min Temp
                    </td>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      undefined
                    </td>
                    <td>
                      <img
                        alt="Sukhumi 2023-01-18 09:00:00 weather icon"
                        className="expand_img"
                        src="https://openweathermap.org/img/wn/03d@2x.png"
                      />
                    </td>
                    <td>
                      11.57 °C
                    </td>
                    <td>
                      10.06 °C
                    </td>
                    <td>
                      11.57 °C
                    </td>
                    <td>
                      14.54 °C
                    </td>
                  </tr>
                  <tr>
                    <td>
                      undefined
                    </td>
                    <td>
                      <img
                        alt="Sukhumi 2023-01-18 12:00:00 weather icon"
                        className="expand_img"
                        src="https://openweathermap.org/img/wn/03d@2x.png"
                      />
                    </td>
                    <td>
                      13.2 °C
                    </td>
                    <td>
                      11.83 °C
                    </td>
                    <td>
                      13.2 °C
                    </td>
                    <td>
                      14.75 °C
                    </td>
                  </tr>
                  <tr>
                    <td>
                      undefined
                    </td>
                    <td>
                      <img
                        alt="Sukhumi 2023-01-18 15:00:00 weather icon"
                        className="expand_img"
                        src="https://openweathermap.org/img/wn/04n@2x.png"
                      />
                    </td>
                    <td>
                      12.26 °C
                    </td>
                    <td>
                      10.95 °C
                    </td>
                    <td>
                      12.26 °C
                    </td>
                    <td>
                      12.26 °C
                    </td>
                  </tr>
                  <tr>
                    <td>
                      undefined
                    </td>
                    <td>
                      <img
                        alt="Sukhumi 2023-01-18 18:00:00 weather icon"
                        className="expand_img"
                        src="https://openweathermap.org/img/wn/04n@2x.png"
                      />
                    </td>
                    <td>
                      11.37 °C
                    </td>
                    <td>
                      9.97 °C
                    </td>
                    <td>
                      11.37 °C
                    </td>
                    <td>
                      11.37 °C
                    </td>
                  </tr>
                  <tr>
                    <td>
                      undefined
                    </td>
                    <td>
                      <img
                        alt="Sukhumi 2023-01-18 21:00:00 weather icon"
                        className="expand_img"
                        src="https://openweathermap.org/img/wn/04n@2x.png"
                      />
                    </td>
                    <td>
                      11.01 °C
                    </td>
                    <td>
                      9.55 °C
                    </td>
                    <td>
                      11.01 °C
                    </td>
                    <td>
                      11.01 °C
                    </td>
                  </tr>
                  <tr>
                    <td>
                      undefined
                    </td>
                    <td>
                      <img
                        alt="Sukhumi 2023-01-19 00:00:00 weather icon"
                        className="expand_img"
                        src="https://openweathermap.org/img/wn/04n@2x.png"
                      />
                    </td>
                    <td>
                      10.28 °C
                    </td>
                    <td>
                      8.7 °C
                    </td>
                    <td>
                      10.28 °C
                    </td>
                    <td>
                      10.28 °C
                    </td>
                  </tr>
                  <tr>
                    <td>
                      undefined
                    </td>
                    <td>
                      <img
                        alt="Sukhumi 2023-01-19 03:00:00 weather icon"
                        className="expand_img"
                        src="https://openweathermap.org/img/wn/02n@2x.png"
                      />
                    </td>
                    <td>
                      9.95 °C
                    </td>
                    <td>
                      8.9 °C
                    </td>
                    <td>
                      9.95 °C
                    </td>
                    <td>
                      9.95 °C
                    </td>
                  </tr>
                  <tr>
                    <td>
                      undefined
                    </td>
                    <td>
                      <img
                        alt="Sukhumi 2023-01-19 06:00:00 weather icon"
                        className="expand_img"
                        src="https://openweathermap.org/img/wn/02d@2x.png"
                      />
                    </td>
                    <td>
                      11.08 °C
                    </td>
                    <td>
                      9.47 °C
                    </td>
                    <td>
                      11.08 °C
                    </td>
                    <td>
                      11.08 °C
                    </td>
                  </tr>
                </tbody>
              </table>
            </li>
          </ul>
          <ul>
            <li
              className="tags"
            >
              <button
                onClick={[Function]}
              >
                adver
              </button>
              <button
                onClick={[Function]}
              >
                tise
              </button>
              <button
                onClick={[Function]}
              >
                Ment
              </button>
              <button
                onClick={[Function]}
              >
                339%?
              </button>
            </li>
            <li
              className="tagError"
            >
              
            </li>
            <li>
              <input
                onKeyUp={[Function]}
                placeholder="Add a tag"
                type="text"
              />
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
  </table>
</li>
`;

exports[`testing Weather component with data Matches the snapshot: shows non-expanded Expand component 1`] = `
<li
  className="single_city"
  style={Object {}}
>
  <table>
    <tbody>
      <tr>
        <td>
          <img
            alt="Sukhumi weather icon"
            className="curr_weather"
            src="https://openweathermap.org/img/wn/03d@2x.png"
          />
        </td>
        <td>
          <ul
            className="data_space"
          >
            <li>
              <div
                className="city_name"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                Sukhumi
              </div>
            </li>
            <li>
              <div
                className="country_name"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                Abkhazia
              </div>
            </li>
          </ul>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          <ul
            className="detailWeather"
          >
            <li>
              <button
                className="expand"
                onClick={[Function]}
              >
                +
              </button>
            </li>
            <li>
              <table>
                <thead>
                  <tr>
                    <td>
                      Date & time
                    </td>
                    <td>
                      Current Weather
                    </td>
                    <td>
                      Current Temp
                    </td>
                    <td>
                      Current Body Temp
                    </td>
                    <td>
                      Current Max Temp
                    </td>
                    <td>
                      Current Min Temp
                    </td>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      undefined
                    </td>
                    <td>
                      <img
                        alt="Sukhumi 2023-01-18 09:00:00 weather icon"
                        className="expand_img"
                        src="https://openweathermap.org/img/wn/03d@2x.png"
                      />
                    </td>
                    <td>
                      11.57 °C
                    </td>
                    <td>
                      10.06 °C
                    </td>
                    <td>
                      11.57 °C
                    </td>
                    <td>
                      14.54 °C
                    </td>
                  </tr>
                </tbody>
              </table>
            </li>
          </ul>
          <ul>
            <li
              className="tags"
            >
              <button
                onClick={[Function]}
              >
                adver
              </button>
              <button
                onClick={[Function]}
              >
                tise
              </button>
              <button
                onClick={[Function]}
              >
                Ment
              </button>
              <button
                onClick={[Function]}
              >
                339%?
              </button>
            </li>
            <li
              className="tagError"
            >
              
            </li>
            <li>
              <input
                onKeyUp={[Function]}
                placeholder="Add a tag"
                type="text"
              />
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
  </table>
</li>
`;
